@startuml Database Schema
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0

title Game Database Schema

' ==================== USERS ====================
entity "users" as users {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(255)
  email : VARCHAR(255) <<unique>>
  password : VARCHAR(255)
  last_seen_at : TIMESTAMP
}

' ==================== STORAGES ====================
entity "storages" as storages {
  * id : BIGINT <<PK>>
  --
  owner_type : VARCHAR(20)
  owner_id : BIGINT <<nullable>>
  type : VARCHAR(20)
  name : VARCHAR(255)
  capacity : INT <<nullable>>
  allowed_types : JSON <<nullable>>
  allowed_slots : JSON <<nullable>>
  metadata : JSON <<nullable>>
}

' ==================== ITEMS ====================
entity "items" as items {
  * id : BIGINT <<PK>>
  --
  template_id : BIGINT <<FK>>
  storage_id : BIGINT <<FK>>
  recipe_id : BIGINT <<FK, nullable>>
  slot : VARCHAR(20) <<nullable>>
  materials_used : JSON <<nullable>>
  custom_name : VARCHAR(255) <<nullable>>
  quantity : INT
  durability : INT
  stats : JSON
}

' ==================== ITEM_TEMPLATES ====================
entity "item_templates" as templates {
  * id : BIGINT <<PK>>
  --
  slug : VARCHAR(50) <<unique>>
  name : VARCHAR(255)
  type : VARCHAR(20)
  icon : VARCHAR(50)
  is_stackable : BOOLEAN
  max_stack : INT
  description : TEXT <<nullable>>
  disassemble_data : JSON <<nullable>>
  stats : JSON <<nullable>>
}

' ==================== RESOURCE_BALANCES ====================
entity "resource_balances" as resources {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  template_id : BIGINT <<FK>>
  quantity : INT
}

' ==================== RECIPES ====================
entity "recipes" as recipes {
  * id : BIGINT <<PK>>
  --
  slug : VARCHAR(50) <<unique>>
  name : VARCHAR(255)
  description : TEXT <<nullable>>
  result_template_id : BIGINT <<FK>>
  result_quantity : INT
}

entity "recipe_components" as components {
  * id : BIGINT <<PK>>
  --
  recipe_id : BIGINT <<FK>>
  template_id : BIGINT <<FK>>
  quantity : INT
}

' ==================== DISASSEMBLE_FORMULAS ====================
entity "disassemble_formulas" as formulas {
  * id : BIGINT <<PK>>
  --
  recipe_id : BIGINT <<FK>>
  name : VARCHAR(255)
  priority : INT
  chance : INT
  conditions : JSON <<nullable>>
  formula : JSON
  is_active : BOOLEAN
}

' ==================== GAME_EVENTS ====================
entity "game_events" as events {
  * id : BIGINT <<PK>>
  --
  uuid : VARCHAR(36) <<unique>>
  event_type : VARCHAR(50)
  aggregate_type : VARCHAR(50)
  aggregate_id : BIGINT
  actor_id : BIGINT <<nullable>>
  occurred_at : TIMESTAMP
  payload : JSON
  metadata : JSON
  correlation_id : VARCHAR(36)
  causation_id : VARCHAR(36) <<nullable>>
  version : INT
}

' ==================== AUCTION ====================
entity "auction_lots" as lots {
  * id : BIGINT <<PK>>
  --
  seller_id : BIGINT <<FK, nullable>>
  template_id : BIGINT <<FK>>
  quantity : INT
  price : INT
  commission_percent : INT
  status : VARCHAR(20)
  is_infinite : BOOLEAN
  buyer_id : BIGINT <<FK, nullable>>
  sold_at : TIMESTAMP <<nullable>>
}

entity "auction_history" as history {
  * id : BIGINT <<PK>>
  --
  lot_id : BIGINT <<FK>>
  seller_id : BIGINT <<FK, nullable>>
  buyer_id : BIGINT <<FK, nullable>>
  template_id : BIGINT <<FK>>
  quantity : INT
  price : INT
  commission : INT
  seller_received : INT
  action : VARCHAR(20)
  occurred_at : TIMESTAMP
}

' ==================== TRADE ====================
entity "trade_offers" as trades {
  * id : BIGINT <<PK>>
  --
  initiator_id : BIGINT <<FK>>
  partner_id : BIGINT <<FK>>
  status : VARCHAR(20)
  initiator_accepted : BOOLEAN
  partner_accepted : BOOLEAN
}

entity "trade_items" as trade_items {
  * id : BIGINT <<PK>>
  --
  trade_id : BIGINT <<FK>>
  user_id : BIGINT <<FK>>
  template_id : BIGINT <<FK>>
  quantity : INT
}

' ==================== RELATIONSHIPS ====================

' Storages
users ||--o{ storages : "owns >"
storages ||--o{ items : "contains >"

' Items
templates ||--o{ items : "has instances >"
recipes ||--o{ items : "crafted by >"

' Resources
users ||--o{ resources : "holds >"
templates ||--o{ resources : "has balance >"

' Recipes
recipes ||--o{ components : "requires >"
recipes ||--o{ formulas : "can disassemble via >"
templates ||--o{ components : "used in >"
templates ||--o{ recipes : "result of >"

' Auction
users ||--o{ lots : "sells >"
templates ||--o{ lots : "lists >"
lots ||--o{ history : "has history >"

' Trade
users ||--o{ trades : "initiates / receives >"
trades ||--o{ trade_items : "contains >"

' Events (source of truth)
users ||--o{ events : "actor >"

@enduml
